Enhance scrollbar styling and ensure consistent base styles in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,32 @@
     --first-shadow-color: rgba(0, 0, 0, 0.18);
 }
 /* ---------- BASE ---------- */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+}
 
 /* ---------- SMOOTH SCROLL ---------- */
+html{
+    scroll-behavior: smooth;
+}
 
 /* ---------- CHANGE THE SCROLL BAR ---------- */
+::-webkit-scrollbar{
+    width: 10px;
+    border-radius: 25px;
+}
+::-webkit-scrollbar-track{
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb{
+    background: #ccc;
+    border-radius: 30px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background:#bbb;
+}
 
 /* ---------- REUSABLE CSS ### ---------- */
